[tool.poetry]
name = "geultto10-gof"
version = "0.1.0"
description = ""
authors = ["s3ich4n <s3ich4n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
multipledispatch = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
